# rusty_synapses

./: Cargo.toml  README.md  pyproject.toml
include/: synapse.h
src/: cobs.rs  core.rs  crc.rs  endpoint.rs  ffi.rs  frame.rs  lib.rs  messages.rs  rouge_protocol.rs  runtime.rs
src/core/: ffi.rs  frame.rs  messages.rs  python.rs
