[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "synapse"
version = "0.1.0"
description = "Python bindings for Synapse protocol (Cortex IPC)"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "synapse"